# agent-skills

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: conventions.md  official-creator-workflow.md
scripts/: activate-plugin  activate-skill  codex-dev  deactivate-all  repo_manager.py  validate-all  validate-changed  validate-plugin  validate-skill
skills/agent-skill-release-review/: SKILL.md
skills/agent-skill-release-review/agents/: openai.yaml
skills/agent-skill-release-review/references/: release-checklist.md
skills/event-storming/: SKILL.md
skills/event-storming/agents/: openai.yaml
skills/event-storming/references/: anti-patterns.md  deliverables.md  document-first-mode.md  facilitation-workflow.md  notation-and-modeling.md  output-patterns.md  patterns.md
skills/event-storming/scripts/: validate_output.py
tests/: test_event_storming_validate_output.py  test_repo_manager.py
